// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WuiFieldPassword is rendered 1`] = `
<div
  class="wuiFormControlLayout"
>
  <div
    class="wuiFormControlLayout__childrenWrapper"
  >
    <wui-validatable-control>
      <input
        aria-label="aria-label"
        class="wuiFieldPassword testClass1 testClass2"
        data-test-subj="test subject string"
        id="1"
        name="wazuh"
        placeholder="Placeholder"
        type="password"
        value="1"
      />
    </wui-validatable-control>
    <div
      class="wuiFormControlLayoutIcons"
    >
      <span
        class="wuiFormControlLayoutCustomIcon"
      >
        <div
          aria-hidden="true"
          class="wuiFormControlLayoutCustomIcon__icon"
          data-wuiicon-type="lock"
        />
      </span>
    </div>
  </div>
</div>
`;

exports[`WuiFieldPassword props compressed is rendered 1`] = `
<div
  class="wuiFormControlLayout wuiFormControlLayout--compressed"
>
  <div
    class="wuiFormControlLayout__childrenWrapper"
  >
    <wui-validatable-control>
      <input
        class="wuiFieldPassword wuiFieldPassword--compressed"
        type="password"
      />
    </wui-validatable-control>
    <div
      class="wuiFormControlLayoutIcons"
    >
      <span
        class="wuiFormControlLayoutCustomIcon"
      >
        <div
          aria-hidden="true"
          class="wuiFormControlLayoutCustomIcon__icon"
          data-wuiicon-type="lock"
        />
      </span>
    </div>
  </div>
</div>
`;

exports[`WuiFieldPassword props dual dual type also renders append 1`] = `
<div
  class="wuiFormControlLayout wuiFormControlLayout--group"
>
  <div
    class="wuiFormControlLayout__childrenWrapper"
  >
    <wui-validatable-control>
      <input
        class="wuiFieldPassword wuiFieldPassword--inGroup wuiFieldPassword--withToggle"
        type="password"
      />
    </wui-validatable-control>
    <div
      class="wuiFormControlLayoutIcons"
    >
      <span
        class="wuiFormControlLayoutCustomIcon"
      >
        <div
          aria-hidden="true"
          class="wuiFormControlLayoutCustomIcon__icon"
          data-wuiicon-type="lock"
        />
      </span>
    </div>
  </div>
  <label
    class="wuiFormLabel wuiFormControlLayout__append"
  >
    String
  </label>
  <span
    class="wuiFormControlLayout__append"
  >
    Span
  </span>
  <button
    aria-label="Show password as plain text. Note: this will visually expose your password on the screen."
    class="wuiButtonIcon wuiButtonIcon--primary wuiFormControlLayout__append"
    title="Show password as plain text. Note: this will visually expose your password on the screen."
    type="button"
  >
    <div
      aria-hidden="true"
      class="wuiButtonIcon__icon"
      data-wuiicon-type="eye"
    />
  </button>
</div>
`;

exports[`WuiFieldPassword props dual dualToggleProps is rendered 1`] = `
<div
  class="wuiFormControlLayout wuiFormControlLayout--group"
>
  <div
    class="wuiFormControlLayout__childrenWrapper"
  >
    <wui-validatable-control>
      <input
        class="wuiFieldPassword wuiFieldPassword--inGroup wuiFieldPassword--withToggle"
        type="password"
      />
    </wui-validatable-control>
    <div
      class="wuiFormControlLayoutIcons"
    >
      <span
        class="wuiFormControlLayoutCustomIcon"
      >
        <div
          aria-hidden="true"
          class="wuiFormControlLayoutCustomIcon__icon"
          data-wuiicon-type="lock"
        />
      </span>
    </div>
  </div>
  <button
    aria-label="Show password as plain text. Note: this will visually expose your password on the screen."
    class="wuiButtonIcon wuiButtonIcon--primary wuiFormControlLayout__append testClass1 testClass2"
    data-test-subj="test subject string"
    title="Show password as plain text. Note: this will visually expose your password on the screen."
    type="button"
  >
    <div
      aria-hidden="true"
      class="wuiButtonIcon__icon"
      data-wuiicon-type="eye"
    />
  </button>
</div>
`;

exports[`WuiFieldPassword props fullWidth is rendered 1`] = `
<div
  class="wuiFormControlLayout wuiFormControlLayout--fullWidth"
>
  <div
    class="wuiFormControlLayout__childrenWrapper"
  >
    <wui-validatable-control>
      <input
        class="wuiFieldPassword wuiFieldPassword--fullWidth"
        type="password"
      />
    </wui-validatable-control>
    <div
      class="wuiFormControlLayoutIcons"
    >
      <span
        class="wuiFormControlLayoutCustomIcon"
      >
        <div
          aria-hidden="true"
          class="wuiFormControlLayoutCustomIcon__icon"
          data-wuiicon-type="lock"
        />
      </span>
    </div>
  </div>
</div>
`;

exports[`WuiFieldPassword props isInvalid is rendered 1`] = `
<div
  class="wuiFormControlLayout"
>
  <div
    class="wuiFormControlLayout__childrenWrapper"
  >
    <wui-validatable-control
      isinvalid="true"
    >
      <input
        class="wuiFieldPassword"
        type="password"
      />
    </wui-validatable-control>
    <div
      class="wuiFormControlLayoutIcons"
    >
      <span
        class="wuiFormControlLayoutCustomIcon"
      >
        <div
          aria-hidden="true"
          class="wuiFormControlLayoutCustomIcon__icon"
          data-wuiicon-type="lock"
        />
      </span>
    </div>
  </div>
</div>
`;

exports[`WuiFieldPassword props isLoading is rendered 1`] = `
<div
  class="wuiFormControlLayout"
>
  <div
    class="wuiFormControlLayout__childrenWrapper"
  >
    <wui-validatable-control>
      <input
        class="wuiFieldPassword wuiFieldPassword-isLoading"
        type="password"
      />
    </wui-validatable-control>
    <div
      class="wuiFormControlLayoutIcons"
    >
      <span
        class="wuiFormControlLayoutCustomIcon"
      >
        <div
          aria-hidden="true"
          class="wuiFormControlLayoutCustomIcon__icon"
          data-wuiicon-type="lock"
        />
      </span>
    </div>
    <div
      class="wuiFormControlLayoutIcons wuiFormControlLayoutIcons--right"
    >
      <span
        class="wuiLoadingSpinner wuiLoadingSpinner--medium"
      />
    </div>
  </div>
</div>
`;

exports[`WuiFieldPassword props prepend and append is rendered 1`] = `
<div
  class="wuiFormControlLayout wuiFormControlLayout--group"
>
  <label
    class="wuiFormLabel wuiFormControlLayout__prepend"
  >
    String
  </label>
  <div
    class="wuiFormControlLayout__childrenWrapper"
  >
    <wui-validatable-control>
      <input
        class="wuiFieldPassword wuiFieldPassword--inGroup"
        type="password"
      />
    </wui-validatable-control>
    <div
      class="wuiFormControlLayoutIcons"
    >
      <span
        class="wuiFormControlLayoutCustomIcon"
      >
        <div
          aria-hidden="true"
          class="wuiFormControlLayoutCustomIcon__icon"
          data-wuiicon-type="lock"
        />
      </span>
    </div>
  </div>
  <label
    class="wuiFormLabel wuiFormControlLayout__append"
  >
    String
  </label>
</div>
`;

exports[`WuiFieldPassword props type dual is rendered 1`] = `
<div
  class="wuiFormControlLayout wuiFormControlLayout--group"
>
  <div
    class="wuiFormControlLayout__childrenWrapper"
  >
    <wui-validatable-control>
      <input
        class="wuiFieldPassword wuiFieldPassword--inGroup wuiFieldPassword--withToggle"
        type="password"
      />
    </wui-validatable-control>
    <div
      class="wuiFormControlLayoutIcons"
    >
      <span
        class="wuiFormControlLayoutCustomIcon"
      >
        <div
          aria-hidden="true"
          class="wuiFormControlLayoutCustomIcon__icon"
          data-wuiicon-type="lock"
        />
      </span>
    </div>
  </div>
  <button
    aria-label="Show password as plain text. Note: this will visually expose your password on the screen."
    class="wuiButtonIcon wuiButtonIcon--primary wuiFormControlLayout__append"
    title="Show password as plain text. Note: this will visually expose your password on the screen."
    type="button"
  >
    <div
      aria-hidden="true"
      class="wuiButtonIcon__icon"
      data-wuiicon-type="eye"
    />
  </button>
</div>
`;

exports[`WuiFieldPassword props type password is rendered 1`] = `
<div
  class="wuiFormControlLayout"
>
  <div
    class="wuiFormControlLayout__childrenWrapper"
  >
    <wui-validatable-control>
      <input
        class="wuiFieldPassword"
        type="password"
      />
    </wui-validatable-control>
    <div
      class="wuiFormControlLayoutIcons"
    >
      <span
        class="wuiFormControlLayoutCustomIcon"
      >
        <div
          aria-hidden="true"
          class="wuiFormControlLayoutCustomIcon__icon"
          data-wuiicon-type="lock"
        />
      </span>
    </div>
  </div>
</div>
`;

exports[`WuiFieldPassword props type text is rendered 1`] = `
<div
  class="wuiFormControlLayout"
>
  <div
    class="wuiFormControlLayout__childrenWrapper"
  >
    <wui-validatable-control>
      <input
        class="wuiFieldPassword"
        type="text"
      />
    </wui-validatable-control>
    <div
      class="wuiFormControlLayoutIcons"
    >
      <span
        class="wuiFormControlLayoutCustomIcon"
      >
        <div
          aria-hidden="true"
          class="wuiFormControlLayoutCustomIcon__icon"
          data-wuiicon-type="lock"
        />
      </span>
    </div>
  </div>
</div>
`;
